--- a/gb/18/7/31/n10603407.md
+++ b/gb/18/7/31/n10603407.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rmxaqt314/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rmxaqt314/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rmxaqt314/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台中国际动画影展    92国2000短片参赛创新高</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2018年07月31日讯】（大纪元记者黄玉燕台湾<ahref="https://github.com/rmxaqt314/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>报导）“2018台中<ahref="https://github.com/rmxaqt314/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%8A%A8%E7%94%BB%E5%BD%B1%E5%B1%95.md#1">国际动画影展</a>”热门单元“短片竞赛”，今年吸引92国共2,006部作品参赛；31日公布100部入围短片，除四大国际动画影展作品，台湾有26部入选，将于今年10月11至16日动画影展中，角逐总奖金120万的8部得奖作品及2项票选奖。</p>
-<p>主办单位<ahref="https://github.com/rmxaqt314/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>市影视发展基金会表示，“短片竞赛”单元去年首度向国际征件，吸引1,849件作品参赛，今年再增设“台湾短片竞赛”及“台湾学生短片竞赛”两组，盼为台湾优秀的动画创作者，打造国际聚焦的舞台。</p>
+<p>【大纪元2018年07月31日讯】（大纪元记者黄玉燕台湾<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>报导）“2018台中<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%8A%A8%E7%94%BB%E5%BD%B1%E5%B1%95.md#1">国际动画影展</a>”热门单元“短片竞赛”，今年吸引92国共2,006部作品参赛；31日公布100部入围短片，除四大国际动画影展作品，台湾有26部入选，将于今年10月11至16日动画影展中，角逐总奖金120万的8部得奖作品及2项票选奖。</p>
+<p>主办单位<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>市影视发展基金会表示，“短片竞赛”单元去年首度向国际征件，吸引1,849件作品参赛，今年再增设“台湾短片竞赛”及“台湾学生短片竞赛”两组，盼为台湾优秀的动画创作者，打造国际聚焦的舞台。</p>
 <p>基金会执行长林盈志表示，今年征件活动自4月初至6月底截止，报名件数突破2,000件、创下新高；基金会共邀请6位初审委员分组评选，最后选出28个国家及地区的100部入围作品。</p>
-<p>而入围的国外动画不乏四大<ahref="https://github.com/rmxaqt314/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%8A%A8%E7%94%BB%E5%BD%B1%E5%B1%95.md#1">国际动画影展</a>作品，都将在台首映，包括刚拿下法国安锡动画影展评审团奖、观众票选奖的《男孩的周末假期》（Weekends）、评审团特别提及的《自行车选手》。此外，还有入围金马奖最佳动画短片的《(迷)留》、获得金穗奖最佳配乐的《我们的月亮》、入围台北电影节最佳动画片《{ Si So Mi }》和高雄青春影展银奖得主《一如往常》等。</p>
+<p>而入围的国外动画不乏四大<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%8A%A8%E7%94%BB%E5%BD%B1%E5%B1%95.md#1">国际动画影展</a>作品，都将在台首映，包括刚拿下法国安锡动画影展评审团奖、观众票选奖的《男孩的周末假期》（Weekends）、评审团特别提及的《自行车选手》。此外，还有入围金马奖最佳动画短片的《(迷)留》、获得金穗奖最佳配乐的《我们的月亮》、入围台北电影节最佳动画片《{ Si So Mi }》和高雄青春影展银奖得主《一如往常》等。</p>
 <p>本届“短片竞赛”6位初选评审之一的导演马匡霈表示，今年参赛影片的多样性更胜以往，媒材与创新风格也让评审惊艳，透过不同的表现手法探讨类似议题；导演廖伟智称赞作品具水准，每部入选影片不仅亦兼具艺术性和纯熟技术，更具独到观点。</p>
 <p>“2018台中国际动画影展”于10月11日至16日在台中站前秀泰影城S2馆与台中凯擘影城举行，所有入围短片都将在影展放映；16日颁奖典礼公布得奖名单。</p>
 <p>责任编辑：陈真</p>
@@ -17,48 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/17/11/20/n9870284.md#1">新唐人动画《小乾坤》再获两国际影展大奖</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/3/11/n10208534.md#1">嘉义国际艺术纪录影展 透过影像铸下惊艳</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/3/12/n10211209.md#1">台《幸福路上》夺东京动画影展最佳长片大奖</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/3/14/n10216519.md#1">2018嘉义国际艺术纪录影展 突破格局盛大登场</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/3/28/n10255730.md#1">2018年曼哈顿国际影展开幕</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/4/10/n10291684.md#1">威明顿市国际摄影展周日开幕</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/4/24/n10331905.md#1">云林偏乡小校 获儿童国际影展  第二名</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/4/24/n10333251.md#1">周末好去处（4月27日～4月29日）国际纪录片影展等</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/5/11/n10382988.md#1">第11届台湾国际纪录片影展 竞赛结果揭晓</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/6/14/n10484292.md#1">王奇《阿公》短片 获六大国际竞赛影展肯定</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/11/20/n9870284.md#1">新唐人动画《小乾坤》再获两国际影展大奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/11/n10208534.md#1">嘉义国际艺术纪录影展 透过影像铸下惊艳</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/12/n10211209.md#1">台《幸福路上》夺东京动画影展最佳长片大奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/14/n10216519.md#1">2018嘉义国际艺术纪录影展 突破格局盛大登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/28/n10255730.md#1">2018年曼哈顿国际影展开幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/4/10/n10291684.md#1">威明顿市国际摄影展周日开幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/4/24/n10331905.md#1">云林偏乡小校 获儿童国际影展  第二名</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/4/24/n10333251.md#1">周末好去处（4月27日～4月29日）国际纪录片影展等</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/11/n10382988.md#1">第11届台湾国际纪录片影展 竞赛结果揭晓</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/14/n10484292.md#1">王奇《阿公》短片 获六大国际竞赛影展肯定</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a></li><li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11178933.md#1" target="_blank">亚利桑那媒体：中共强摘器官对美国有何影响</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213719.md#1" target="_blank">许茹：火灾爆炸频发京城连震 昭示奸佞当道</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/29/n11288413.md#1" target="_blank">超越人生苦难 女教授从80岁回到60岁</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523568.md#1">被预言选中的人：川普和曹操</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/31/n12515858.md#1">预言试析：揭开魔鬼“666”真面目</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525930.md#1">【重播】大选生变 摇摆州疑舞弊 法律战开打</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528162.md#1">【薇羽看世间】美大选现异常 谁在搅混水？</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517535.md#1">【重播】川普讲话：选举须公正不留污点</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】川普宣布在宾州等三州获胜</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/26/n12501740.md#1">【重播】美国大选日 17小时接力直播</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525654.md#1">获胡歌惊喜探班 唐嫣害羞尖叫一直捂脸</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525654.md#1">获胡歌惊喜探班 唐嫣害羞尖叫一直捂脸</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525868.md#1">赵丽颖不识“兰”字惹议 主播帮圆场却更尴尬</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526176.md#1">蚂蚁集团暂缓上市 赵薇等明星被指亏大了</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12522915.md#1">夫妻俩持不同政见 黄秋生有一套相处之道</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12522493.md#1">Sana从没看过她生气 子瑜面对压力会让自己冷静</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524129.md#1">被寄养小狗花半个月走100公里回家找主人</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521919.md#1">传川普同意出售F-22战机给以色列</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525395.md#1">干涩疲劳是眼睛在呼救！身体4种自救警讯</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/23/n12497346.md#1">生气就发飙？用情绪绑架他人这举动弱爆了</a></li>
-<li><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525454.md#1">黑芝麻补肾、补血又防白发 但3类人要少吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rmxaqt314/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rmxaqt314/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/7/31/n10603407.htm">台中国际动画影展    92国2000短片参赛创新高</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/7/31/n10603407.htm">台中国际动画影展    92国2000短片参赛创新高</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rmxaqt314/djy/blob/master/gb/18/7/31/n10603407.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rmxaqt314/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rmxaqt314/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rmxaqt314/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/18/7/31/n10603407.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
